objects/APTS_LSU_Terms_and_Condition__c.object
<CustomObject>
    <description>Holds Terms and Conditions attributes for specific specific Org Id</description>
    <fields>
        <fullName>APTS_Apttus_OrgId__c</fullName>
        <label>Apttus OrgId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Packing__c</fullName>
        <label>Packing</label>
        <picklist>
            <picklistValues>
                <fullName>Cardboard at Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardboard Included</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Packing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Penalty__c</fullName>
        <label>Penalty</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Quality_Control__c</fullName>
        <label>Quality Control</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Quality Control</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Special_Penalty_Terms__c</fullName>
        <label>Special Penalty Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Special_Processing_Code__c</fullName>
        <label>Special Processing Code</label>
        <picklist>
            <picklistValues>
                <fullName>26 - Managed Product Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27 - Blanket Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29 – Customer Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 - Do Not Ship Before</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Special_Warranty_Terms__c</fullName>
        <label>Special Warranty Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Tc_Extra_Info__c</fullName>
        <label>Tc Extra Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Tc_Letter_of_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tc Letter of Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Terms_and_Conditions_Type__c</fullName>
        <label>Terms and Conditions Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Warranty__c</fullName>
        <label>Warranty</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>42</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>48</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>LSU Terms and Condition</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LSU T&amp;C - {00000}</displayFormat>
        <label>LSU Terms and Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LSU Terms and Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>